# xkcd-viewer

./: README.md  pyproject.toml  requirements.txt
src/: main.py
src/assets/buttons/: README.txt
src/core/: api_client.py  comic.py  comic_service.py  db.py
src/gui/: main_window.py  scrollImage.py
src/utils/: cache.py
src/xkcd_viewer/: main.py
src/xkcd_viewer/core/: api_client.py  comic.py  comic_service.py
src/xkcd_viewer/gui/: main_window.py
src/xkcd_viewer/utils/: cache.py  circular_list.py  preferences.py
